Continue work on draw modes